# audio_extract

./: .gitignore  Makefile  gui.spec  pyproject.toml  readme.md
.github/workflows/: makefile.yml  release.yml
docs/: build.md
src/audio_excerpt/: __main__.py  gui.py  main.py  parameters.yaml
src/audio_extract/: Makefile  gui.py  main.py  process.py  requirements.txt  welcome.py
src/audio_extract/tests/: test_main.py
src/batch_audio_extract/: ffmpeg.py  gui.py  main.py  process.py  welcome.py
tests/: test_main.py
