[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio_extract"
version = "0.4.0"
authors = [
  { name="makiwara-fr", email="" },
]
description = "A mass treatment script for extracting part of audio files using FFMPEG"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml"
]

[project.scripts]
audio_extract = "audio_extract.main:process"

[project.gui-scripts]
audio_extract_gui = "audio_extract.gui:launch_gui"


[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
