[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "*.json",
  "*.yaml",
]


[project]
name = "audio_extract"
version = "0.5.0"
authors = [
  { name="makiwara-fr", email="" },
]
description = "A mass treatment script for extracting part of audio files using FFMPEG"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml",
]

[project.scripts]
audio_extract = "audio_extract.main:main"


[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

[dependency-groups]
dev = [
    "black>=23.3.0",
    "pytest>=7.4.4",
]
