[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "*.json",
  "*.yaml",
]


[project]
name = "batch_audio_extract"
version = "0.6.0"
authors = [
  { name="makiwara-fr", email="makiwara@makiwara.com" },
]
description = "A mass treatment script for extracting part of audio files using FFMPEG"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml",
]

[project.scripts]
audio_extract = "batch_audio_extract.main:main"


[project.urls]
"Homepage" = "https://github.com/makiwara-fr/audio_extract"
"Bug Tracker" = "https://github.com/makiwara-fr/audio_extract/issues"

[dependency-groups]
dev = [
    "black>=23.3.0",
    "pytest>=7.4.4",
    "pytest-sugar>=1.0.0",
]
